--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -152,7 +152,7 @@ Formally, let $\mathbf{r}$ and $\mathbf{w}$ be the set of indices by which $\mem
   \varepsilon^\mu &= \begin{cases}
     \continue &\when \mathbf{x} = \{\} \\
     \panic &\when \min(\mathbf{x}) \bmod 2^{32} < 2^{16} \\
-    \fault \times 2^{12}\floor{\min(\mathbf{x}) \bmod 2^{32} \div 2^{12}} &\otherwise
+    \fault \times \mathsf{Z}_P\floor{\min(\mathbf{x}) \bmod 2^{32} \div \mathsf{Z}_P} &\otherwise
   \end{cases}
 \end{align}
 
